Memory cache is working